--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,6 +21,14 @@
     <string name="enter_the">Enter the 4 digit code sent to your phone</string>
     <string name="i_have_a_problem">I have a problem.</string>
     <string name="hi_welcome">Hi,\nWelcome back!</string>
+    <string name="about_us">About Us</string>
+    <string name="help_center">Help Center</string>
+    <string name="privacy_policy">Privacy Policy</string>
+    <string name="terms_and_conditions">Terms and Conditions</string>
+    <string name="add_city">Add City</string>
+    <string name="add_property">Add Property</string>
+    <string name="add_country">Add Country</string>
+    <string name="add_clients_users">Add Clients/Users</string>
 
     <style name="TabLayout">
         <item name="android:textStyle">bold</item>
