--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,4 +46,6 @@
         <item name="android:textColor">#C8C8D0</item>
     </style>
 
+    <string name="title_activity_maps">MapsActivity</string>
+
 </resources>
