updated all Ui and added Map

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
     </string>
     <string name="title2">Get the updates of recent client in new countries</string>
     <string name="properties">Recent Properties</string>
+    <string name="description">The European languages are members of the same family. Their separate existence is a myth. For science, music, sport, etc, Europe uses the same vocabulary. The languages only differ in their grammar, their pronunciation and their most common words. Everyone realizes The European languages are members of the same family. Their separate existence is a myth.</string>
 
     <!--    Authentication String-->
     <string name="log_in">Log In</string>
