--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,5 +52,6 @@
     <string name="title_activity_maps">MapsActivity</string>
     <string name="enter_number_of_post_and_videos">Enter number of Post and Videos</string>
     <string name="enter_number_of_reviews">Enter number of reviews</string>
+    <string name="_0_5_km"><b >0.5 </b>KM</string>
 
 </resources>
